--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <uses-library android:name="android.test.runner"></uses-library>
+        <uses-library 
+            android:name="android.test.runner">
+        </uses-library>
         <activity
             android:name="cs2114.tiletraveler.TileTravelerScreen"
             android:label="@string/app_name" >
